
syntax = "proto3";

option go_package = "rev_proxy/gen";

package example_service;

message ExampleRequest {
  string name = 1;
  int64 id = 2;
}

message ExampleReply {
  string message = 1;
  int64 id = 2;
}

service ExampleService {
  rpc ExampleCall (ExampleRequest) returns (ExampleReply) {}
}

